1.3 beta 4
- Fixed accidentals in score editor working over all octaves
- Move playback timer to the status bar where it is less intrusive
- Fix reverting to default output when custom output port is not found
- Fixed importing drum tracks from midi (would result in a graphical glitch)

1.3 beta 3
- Added support for recording from MIDI keyboard/instrument
- Added support for multiple program changes (multiple instruments per track)
- Show note names in flats when the key is going in flats
- Allow shift-clicking in measure bar to select more measures
- Shift-clicking on a note that is already selected unselects it
- Fixed what happens when you resize the frame while a track is maximized
- Allow entering precise values in the controller editor
- Allow finer pitch bends
- Fixed a couple minor glitches

1.3 beta 2
- Improved working with more than one editor per track
- Preview values in the controller editor
- Add a Welcome screen instead of quitting when last tab is closed
- Fixed pressing shift+number in guitar editor in Cocoa
- use sheet dialogs on OSX
- Fixed some placement issues with silences in printed scores
- Minor fixes in new OSX player code
- Improved note beaming in score editor when using multiple time signatures
- Improved the pause feature to not affect the song start measure
- Other bug fixes and minor improvements
- Show which sequences have unsaved changes
- Display a timer during playback
- Preview note in a status bar
- Fixed score editor regression

1.3 beta 1
- Intensive code refactoring and cleanup
- Support sending midi output to external devices
- Improve rendering of short notes in tablature view
- Improve selection to preview which notes are included
- Auto-extend song length when moving notes past end
- Support for importing lyrics events (not yet for editing them)
- Performance (fluidity/responsivity) improvements
- Fixed glitches in software rendering mode
- Fixed crash when trying to print a song containing an empty track